# rateMyCode

./: .gitignore  MANIFEST.in  README.md  config.properties  config.properties.template  install.sh  pyproject.toml  rateMyCode Implementation & Architecture Manual.md  ratemycode  verify.sh
docs/: bad.py  good.py
engine/: analyzer.py  requirements.txt
src/: RateMyCode.java
src/ratemycode/: analyzer.py  config.py  main.py  monitor.py  utils.py
tests/: test_analyzer.py
